refactor : section - line 도메인 관계 변경

--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
     testImplementation 'io.rest-assured:rest-assured:4.2.0'
 
     runtimeOnly 'com.h2database:h2'
+
+    implementation group: 'com.google.guava', name: 'guava', version: '11.0.2'
+
+
 }
 
 test {
